# vault-client-simple

./: .gitignore  LICENSE  README.md  default.nix  hie.yaml  shell.nix  vault-client-simple.cabal
.github/workflows/: ci.yaml
nix/: sources.json
src/Network/: Vault.hs
test/: Main.hs
