cabal-version:       2.4

name:                vault-client-simple
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Brandon Hamilton
maintainer:          brandon.hamilton@gmail.com
build-type:          Simple
tested-with:         GHC == 8.10.1

source-repository-package
    type: git
    location: https://github.com/brandonhamilton/vault-client-simple.git

library
  exposed-modules:     Network.Vault
  build-depends:       base >=4.14 && <4.15
                     , aeson >=1.4.7.1 && <1.5
                     , bytestring >=0.10
                     , http-client >=0.5.13.1 && <0.8
                     , http-types >=0.8
                     , network-uri >=2.6
                     , text >=1.2 && < 1.3
                     , unordered-containers >=0.2.10.0 && <0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
                       -Wunused-packages

test-suite vault-client-simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15
                     , vault-client-simple
                     , aeson >=1.4.7.1 && <1.5
                     , hspec >=2.7
                     , http-mock >=0.1.0.0
                     , http-types >=0.8
                     , network-uri >=2.6
                     , unordered-containers >=0.2.10.0 && <0.3
                     , wai >= 3.2
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N